# picochat

./: CMakeLists.txt  Cargo.toml  LICENSE  build.rs
src/: broadcasts.rs  commands.rs  main.c  main.rs  messages.rs  routines.rs  state.rs
