[package]
name = "picochat"
authors = ["Jakub Mańczak"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jakubmanczak/picochat"
license = "ISC"
description = "No-client-required relay chat over TCP."

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
